<resources>
    <string name="app_name">My Application</string>
    <string name="lock_title">Lock</string>
    <string name="button">Button</string>
    <string name="Lock_Id">TWR455</string>
    <string name="lock_address">Björnskärsvägen 48</string>
    <string name="status">Status</string>
    <string name="current_lock_status">Unlocked</string>
    <string name="the_current_lock_status">The current lock status</string>
    <string name="battery_status">Battery status</string>
    <string name="bluetooth_connection_status">Bluetooth connection status</string>
    <string name="route">Route</string>
    <string name="time_to">Time to</string>
    <string name="vehicle_gps_connected">Vehicle GPS connected</string>
    <string name="time">5 min</string>
</resources>