<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.DashboardFragment">

    <data>
        <variable
            name="myName"
            type="com.example.myapplication.DashboardFragment" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/lockInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="lockTitle,lockId,lockAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:layout_marginTop="40dp"
        android:padding="4dp"
        android:id="@+id/lockTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_title"
        app:layout_constraintEnd_toStartOf="@id/lockId"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/lockId"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lock_Id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/lockTitle"
       app:layout_constraintTop_toTopOf="@id/lockTitle" />


    <TextView
        android:id="@+id/lockAddress"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_address"
        app:layout_constraintEnd_toEndOf="@id/lockId"
        app:layout_constraintStart_toStartOf="@id/lockTitle"
        app:layout_constraintTop_toBottomOf="@id/lockTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LockCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockAddress">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LockStatusBar"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/LockCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LockCardStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_lock_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/BluetoothStatus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_bluetooth_on"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/LockBatteryStatus"
                android:contentDescription="@string/bluetooth_connection_status" />

            <ImageView
                android:id="@+id/LockBatteryStatus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/common_full_open_on_phone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/battery_status" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/LockStatusLight"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LockStatusBar" />

        <!-- The srcCompat image is transparent and colors are set in border.xml -->
        <ImageView
            android:id="@+id/LockBigImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:contentDescription="@string/the_current_lock_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LockStatusLight"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DistanceCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LockCard"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/RouteStatusBar"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/RouteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/GpsStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_gps_connected"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/RouteTitle" />

                <TextView
                    android:id="@+id/timeToNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                  />

                <TextView
                    android:id="@+id/timeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to"
                    app:layout_constraintEnd_toStartOf="@id/timeLockIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/timeLockIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:layout_constraintEnd_toStartOf="@id/timeToNext"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/common_full_open_on_phone"
                    android:contentDescription="@string/battery_status" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- The srcCompat image is transparent and colors are set in border.xml -->
            <ImageView
                android:id="@+id/Hospital"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                android:contentDescription="@string/the_current_lock_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/RouteStatusBar"
                app:srcCompat="@drawable/ic_launcher_foreground" />
            <ImageView
                android:id="@+id/Ambulance"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                android:contentDescription="@string/the_current_lock_status"
                app:layout_constraintStart_toEndOf="@id/Hospital"
                app:layout_constraintTop_toBottomOf="@id/RouteStatusBar"
                app:srcCompat="@drawable/ic_launcher_foreground" />
            <ImageView
                android:id="@+id/SmallLock"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                android:contentDescription="@string/the_current_lock_status"
                app:layout_constraintStart_toEndOf="@id/Ambulance"
                app:layout_constraintTop_toBottomOf="@id/RouteStatusBar"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <ImageView
                android:id="@+id/Accident"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/border"
                android:layout_margin="4dp"
                android:contentDescription="@string/the_current_lock_status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/RouteStatusBar"
                app:srcCompat="@drawable/ic_launcher_foreground" />
        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>